WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294312
[Site Isolation] _doAfterNextPresentationUpdate does not invoke updateBlock
https://bugs.webkit.org/show_bug.cgi?id=294312
Summary
[Site Isolation] _doAfterNextPresentationUpdate does not invoke updateBlock
Sihui Liu
Reported
2025-06-10 22:30:37 PDT
rdar://138875168
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2025-06-10 22:49:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46592
EWS
Comment 2
2025-06-17 08:01:15 PDT
Committed
296313@main
(8cbd42ddce32): <
https://commits.webkit.org/296313@main
> Reviewed commits have been landed. Closing PR #46592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug