Source/WebKit/UIProcess/RemotePageProxy.cpp
@@ -185,4 +185,32 @@ void RemotePageProxy::isPlayingMediaDidChange(WebCore::MediaProducerMediaStateFl
 #endif
 }
 
+void RemotePageProxy::setDrawingArea(DrawingAreaProxy* drawingArea)
+{
+    RefPtr page = m_page.get();
+    if (!page)
+        return;
+
+    RefPtr mainFrame = page->mainFrame();
+    if (!mainFrame)
+        return;
+
+    if (!drawingArea) {
+        m_drawingArea = nullptr;
+        return;
+    }
+
+    m_drawingArea = RemotePageDrawingAreaProxy::create(*drawingArea, m_process);
+    m_process->send(
+        Messages::WebProcess::CreateWebPage(
+            m_webPageID,
+            page->creationParametersForRemotePage(m_process, *drawingArea, RemotePageParameters {
+                URL(page->pageLoadState().url()),
+                mainFrame->frameTreeCreationParameters(),
+                page->mainFrameWebsitePoliciesData() ? std::make_optional(*page->mainFrameWebsitePoliciesData()) : std::nullopt
+            })
+        ), 0
+    );
+}
+
 }
